--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         
         <div class="calcButtons">
             <div class="newRow" style="padding-top: 10px;">
-                <button class="AC button top" data-value="AC">AC</button>
+                <button class="AC button top" data-value="C">C</button>
                 <button class="± button top" data-value="±">±</button>
                 <button class="% button top" data-value="%">%</button>
                 <button class="÷ button yellow" data-value="÷">÷</button>
